Переназвал переменные, добавил функцию вычисления ежемесячного пополнения, добавил листенеры для всех полей ввода и заполнение поля вывода

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </label>
       <label class="form__label">
         Требуемая сумма
-        <input type="number" class="form__input number" />
+        <input type="number" class="form__input need_amount" />
       </label>
       <label class="form__label">
         Срок накопления
