Добавил фоновый bg в созданную папку images и поправил файл index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
   <header class="header">
-    <button class="add__form">Добавить цель
-    </button>
+    <button class="add__form">Добавить цель</button>
   </header>
   <div class="container">
     <div class="form" id="1">
@@ -46,8 +45,7 @@
         Ежемесячное пополнение
         <input type="text" class="form__input month_amount" readonly />
       </label>
-      <button class="form__delete">Удалить цель
-      </button>
+      <button class="form__delete">Удалить цель</button>
     </div>
   </div>
 
