add logic for all 'new' Form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </button>
   </header>
   <div class="container">
-    <div class="form" id="1">
+    <div class="form" id="b">
       <label class="form__label">
         Название цели
         <input type="text" class="form__input name" />
