--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="add__form">Добавить цель</button>
   </header>
   <div class="container">
-    <div class="form" id="1">
+    <div class="form" id="b">
       <div class="form__wrap--bg">
         <div class="form__top">
           <h1 class="form__top--title">копилка</h1>
