add new function getNewMonths

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
           <label class="form__label">
             Ежемесячное пополнение
-            <input type="text" class="form__input month_amount" readonly />
+            <input type="text" class="form__input month_amount" />
           </label>
         </div>
       </div>
