add localStorage rebag name id

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="add__form">Добавить цель</button>
   </header>
   <div class="container">
-    <div class="form" id="b">
+    <div class="form" id="form-0">
       <div class="form__wrap--bg">
         <div class="form__top">
           <h1 class="form__top--title">копилка</h1>
@@ -32,11 +32,11 @@
         <div class="form__wrap">
           <label class="form__label">
             Требуемая сумма
-            <input type="number" class="form__input need_amount" placeholder="0 RUB" value="10000" />
+            <input type="number" class="form__input need_amount" placeholder="0 RUB" value="" />
           </label>
           <label class="form__label">
             Стартовая сумма
-            <input type="number" class="form__input start_amount" placeholder="0 RUB" value="2000" />
+            <input type="number" class="form__input start_amount" placeholder="0 RUB" value="" />
           </label>
           <div class="form__wrap--percent">
             <label class="form__label">
