add variable popup

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       Сумму, готовую спустить на ништяки
       <input type="number" class="form__input header__input allowed_amount" />
     </label>
-    <button class="add__form link-open">Нажми для теста</button>
+    <button class="add__form link-open">хватит ли мне?</button>
   </header>
   <div class="container">
     <div class="form" id="form-0">
@@ -74,7 +74,6 @@
   </div>
 
   <script src="./js/app.js"></script>
-  <script src="./js/popup.js"></script>
 </body>
 
 </html>
