add focusinput, button to edit and save, description for monthammountinput

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             Ежемесячное пополнение
             <input type="text" class="form__input month_amount" />
           </label>
+          <p class="form__label another_amount">Поменяйте, если не устраивает сумма</p>
         </div>
       </div>
-      <button class="form__delete">Удалить цель</button>
+      <button class="button_form form__edit">СОХРАНИТЬ</button>
+      <button class="button_form form__delete">Удалить</button>
     </div>
   </div>
   <div id="popup" class="popup">
